--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 #home nav .logo .logo-text {
   font-family: anton;
   font-size: 1.5rem;
+  font-weight: bold;
 }
 
 #home nav .nav-links {
@@ -130,6 +131,7 @@ nav .menu {
   justify-content: center;
   align-items: center;
   gap: 5rem;
+  padding-bottom: 2rem;
 }
 
 #our-team .team-member {
